Fix error msg layout issue of poi custom fields.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -489,6 +489,16 @@ body {
 	margin:0px auto;
 }
 
+.customFieldsKey a{
+	text-align: center;
+}
+
+.templateCustomField .error-msg{
+	float:left;
+	width: 100%;
+}
+
+
 
 /******************* poi-list.html *********************/
 .copy-poi,
